2008-05-24  Gert Driesen  <drieseng@users.sourceforge.net>

	* StringTest.cs: Comment out assert in SubString2 as corresponding
	fix was reverted. 

2008-05-24  Gert Driesen  <drieseng@users.sourceforge.net>

	* StringTest.cs: Improved ctor tests. Avoid use of ExpectedException.
	Moved tests for argument checks to separate methods. Added tests for
	EndsWith, IndexOf, IndexOfAny, Intern, IsInternet, Format, StartsWith,
	SubString, ToCharArray, ToLower and Split. Use String.Empty instead of
	"". Use more meaningful names for test methods. Marked failing tests
	that were added by Andreas as NotWorking. 

2008-05-24  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* StringTest.cs: Add (more) tests for (Last)IndexOf

2008-05-20  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* StringTest.cs: Add more tests for SplitRemoveEmpty

2008-05-12  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeTest.cs: Added GetType, GetTypeArray and GetTypeFromHandle tests
	for argument checks.

2008-05-07  Robert Jordan  <robertj@gmx.net>

	* Runtime*Handle.cs: Add serialization tests.

2008-05-02  Atsushi Enomoto  <atsushi@ximian.com>

	* ConvertTest.cs : added test for Convert.FromBase64String()
	  with excessive = characters (r102358).

2008-04-26  Zoltan Varga  <vargaz@gmail.com>

	* ArrayTest.cs: Add a test for #383876.

2008-04-16  Zoltan Varga  <vargaz@gmail.com>

	* DateTimeOffsetTest.cs (ToStringWithFormatAndCulture): Avoid dependency on
	invariant culture. Fixes #380345.

2008-04-14  Zoltan Varga  <vargaz@gmail.com>

	* StringTest.cs: Add a test for #374511.

2008-04-13  Zoltan Varga  <vargaz@gmail.com>

	* TypeTest.cs: Add a test for #346419.

﻿2008-04-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeTest.cs (GetGenericArguments_ArgumentsHaveAttributes): Added test for bug #377596.
	It verifies if it's possible to retrieve attributes from generic arguments.

﻿2008-04-01  Andreas Nahr  <ClassDevelopment@A-SoftTech.com>
